--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,27 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+fieldset{
+  background: #535bf2;
+  border-radius: 20px;
+  width: 400px;
+}
+
+h2{
+  color: whitesmoke;
+}
+
+fieldset{
+  color: black;
+  font-weight: bold;
+}
+
+input{
+  color: #535bf2;
+  background-color: whitesmoke;
+  border-radius: 20px;
+  padding: 10px 10px;
+  margin: 10px;
+}
+
